# Revision history for Perl extension Encode.
#
# $Id: Changes,v 2.37 2009/09/06 14:32:21 dankogai Exp dankogai $
$Revision: 2.37 $ $Date: 2009/09/06 14:32:21 $
! t/CJKT.t t/guess.t t/perlio.t t/piconv.t
  $PERL_CORE trick is now off for perl 5.11 or better.
  Message-Id: <b77c1dce0909070245s59b294bq8a8a8166e7342793@mail.gmail.com> 
  Message-Id: <E7FADA6C-D5A7-4ECA-BE4C-85911A97677E@dan.co.jp>
  Message-Id: <20090907154908.GS60303@plum.flirble.org>
  Message-Id: <20090907161509.GN8057@iabyn.com>

2.37 2009/09/06 14:32:21
! Encode.xs
  fixed: compilation failure on compilers not supporting C99
  http://rt.cpan.org/Ticket/Display.html?id=49466

2.36 2009/09/06 09:03:07
! Encode.xs
  fixed: 'find_encoding("utf8")->decode(undef)' causes segmentation fault
  http://rt.cpan.org/Ticket/Display.html?id=49462

2.35 2009/07/13 02:06:30
! lib/Encode/MIME/Header.pm
  Addressed RT #40027:
   decode of MIME-Header removes too much whitespace
  http://rt.cpan.org/Ticket/Display.html?id=40027
  http://rt.cpan.org/Ticket/Display.html?id=42902
! t/piconv.t
  Addressed by CSJEWELL: t/piconv.t loops infinitely on Win32
  http://rt.cpan.org/Ticket/Display.html?id=47760

2.34 2009/07/08 13:34:15
! bin/piconv
  duplicate-BOM problem now fixed.
  Message-Id: <10ECB9B7-006E-4570-9EB6-51C49F04ADCF@dan.co.jp>
! bin/piconv
+ t/piconv.t
  patches and tests by SREZIC
  Message-Id: <4A5366DA.8050801@iconmobile.com>
! Makefile.PL
  man* removed on behalf of blead
  Message-Id: <20090326135219.GU18164@plum.flirble.org>

2.33 2009/03/25 07:55:57
! lib/Encode/MIME/Header.pm
  Decontaminated $& which sneaked in on 2.31.
  Message-Id: <67FC9F3A39C746DA95AAB6BB01539099@robmhp>
  Message-Id: <693254b90903242352x2dc26ba6p5e68deb871fa88ae@mail.gmail.com>
  http://coderepos.org/share/changeset/31542

2.32 2009/03/07 07:32:37
! lib/Encode/Alias.pm t/Alias.t
  Encode now resolves 'en_US.UTF-8' to utf-8-strict like 'ja_JP.euc'
  Those who set locale on their shells should be happier now.
! AUTHORS