@@ -1356,7 +1356,7 @@ L<http://www.icu-project.org/>
 =item *
 
 ICU Character Mapping Tables
-L<http://www.icu-project.org/charset/>
+L<http://site.icu-project.org/charts/charset>
 
 =item *
 
